# wasteland

./: .clang-format  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  decl.lua  temp.txt  test.lua
assets/: 2.5D.ldtk  test.ldtk
assets/shaders/: jitter.fs  jitter.glsl  jitter.vs
cmake/: box2d.cmake  enet.cmake  flecs.cmake  lua.cmake  raylib.cmake
core/: main.c
core/include/: action.h  assets.h  entity.h  global.h  level.h  lua_action.h  lua_camera.h  lua_entity.h  lua_funcs.h  lua_helper.h  lua_level.h  sprite.h  spritesheet.h  texture.h  tilemap.h
core/include/lua/: animator.h  asset_loader.h  box_collider.h  dynamic_body.h  entity.h  event_handler.h  input.h  sprite.h  static_body.h  utils.h  world.h
core/src/: action.c  assets.c  entity.c  level.c  lua_action.c  lua_camera.c  lua_entity.c  lua_funcs.c  lua_helper.c  lua_level.c  spritesheet.c  texture.c  tilemap.c
core/src/lua/: animator.c  asset_loader.c  box_collider.c  dynamic_body.c  entity.c  event_handler.c  input.c  sprite.c  static_body.c  utils.c  world.c
include/: level.h  level_test.h
lib/array/: CMakeLists.txt  array.c  array.h
lib/aseprite/: ase_defs.h
lib/collision/: CMakeLists.txt  box_collider.c  box_collider.h  collision.c  collision.h  collision_defs.h  polygon_collider.c  polygon_collider.h  sparse_grid.c  sparse_grid.h  sparse_object.c  sparse_object.h  spatial_grid.c  spatial_grid.h
lib/hashmap/: CMakeLists.txt  hashmap.c  hashmap.h
lib/ldtk/: CMakeLists.txt  ldtk.c  ldtk.h  ldtk_defs.h  ldtk_entity.c  ldtk_entity.h  tilemap.c  tilemap.h
lib/scene-graph/: CMakeLists.txt  graph-sort.c  graph-sort.h  parallel-graph-sort.c  parallel-graph-sort.h  scene-graph.c  scene-graph.h
lib/thpool/: CMakeLists.txt  thpool.c  thpool.h
lib/thread-pool/: CMakeLists.txt  thread-pool.c  thread-pool.h
lib/ui/: CMakeLists.txt  ui.c  ui.h
scripts/: assets.lua  decl.lua  entities.lua  input.lua  main.lua  npc.lua  types.d.lua
scripts/declarations/: entity.lua  global.lua  level.lua
src/: level_test.c  main.c
tests/: CMakeLists.txt  test_array.c  test_hashmap.c  test_scene-graph.c  test_sparse_grid.c
toolchains/: emscripten_toolchain.cmake  mingw-w64_toolchain.cmake  osx-arm64_toolchain.cmake
